@@ -1511,6 +1511,13 @@ Example : northwest\n\r\
 Short(s): NW\n\r\
 Travel northwestwardly direction from the present room or location.
 	
+NOPOSE=\
+Command : NOPOSE\n\r\
+Usage   : NOPOSE\n\r\
+Example : nopose\n\r\
+Short(s): \n\r\
+Turns off your current pose.  See the POSE command.
+
 NOTEACH=\
 Command : NOTEACH\n\r\
 Usage   : NOTEACH\n\r\
@@ -1604,7 +1611,7 @@ Usage   : POSE [STANDING DESCRIPTION] ... \n\r\
 Example : pose is standing here talking to himself.\n\r\
 Short(s): \n\r\
 Changes the message that is seen when a player is standing passively \
-in a room.
+in a room.  Use NOPOSE to turn off.
 
 PRACTICE=\
 Command : PRACTICE\n\r\
