@@ -2419,3 +2419,4 @@ ruthless programmer, and sentenced to a quick death.
 23.Scriptable: get_prog now applies to getting items from containers on the ground.
 24.Druids can now shapeshift into lower versions of their existing shapeshift forms.
 25.Char Creation Stat picker now has Random Roll option.
+26.POSE can now be turned off with NOPOSE
